Add Service Page
Updated links on all pages

--- a/pages/service.html
+++ b/pages/service.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
   <head>
     <meta charset="utf-8">
-    <title>Sobre Nós · Alfa Médico Hospitalar</title>
+    <title>Serviços · Alfa Médico Hospitalar</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../css/base.css" rel="stylesheet">
     <link href="../css/alfa.css" rel="stylesheet">
@@ -26,9 +26,9 @@
           <nav class="main-nav navbar-collapse collapse" role="navigation">
             <h1 class="hide">Menu de avegação</h1>
             <a href="../index.html" title="Homepage">Home<span class="icon-10"></span></a>
-            <a class="current" title="Sobre Nós">Sobre Nós<span class="icon-10"></span></a>
+            <a href="../about/about.html" title="Sobre Nós">Sobre Nós<span class="icon-10"></span></a>
             <a href="../products/products.html" title="Produtos">Produtos<span class="icon-10"></span></a>
-            <a href="../pages/service.html" title="Serviços">Serviços<span class="icon-10"></span></a>
+            <a class="current" title="Serviços">Serviços<span class="icon-10"></span></a>
             <a href="../news/blog.html" title="Notícias">Notícias<span class="icon-10"></span></a>
             <a href="../contact.html" title="Contato">Contato<span class="icon-10"></span></a>
           </nav>
@@ -97,7 +97,7 @@
             <section class="col-xs-12">
               <div class="border-content">
                 <div class="clearfix">
-                  <h1 class="title-front mt-2 mb-3">Nossa história</h1>
+                  <h1 class="title-front mt-2 mb-3">Nossos serviços</h1>
                 </div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
               </div>
@@ -107,76 +107,151 @@
       </div>
     </header>
     <main class="container" role="main">
-      <h1 class="title-front mb-3">Conheça a Alfa Médico Hospitalar</h1>
+      <h1 class="title-front mb-3">Conheça nossos serviços</h1>
       <section class="row">
-        <div class="col-xs-12 col-sm-12 col-md-4">
+        <div class="col-xs-12 col-sm-6">
           <div class="content-box border-content">
-          	<h3 class="heading-2">AGILIDADE</h3>
-            <figure class="figure-box fig-hover">
-              <img src="../images/about-3.jpg" class="img-responsive" alt="Raphaela Aguiar - Presidente"/>
-            </figure>
-            <p class="mb-1">Porta um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação. A vantagem de usar Lorem Ipsum é que ele tem uma distribuição normal de letras, ao contrário de "Conteúdo aqui, conteúdo aqui", fazendo com que ele tenha uma aparência similar a de um texto legível.</p>
-          </div>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-4">
-          <div class="content-box border-content">
-          	<h3 class="heading-2">COMPROMISSO</h3>
+          	<h3 class="heading-2">ASSESSORIA NUTRICIONAL</h3>
             <figure class="figure-box fig-hover">
               <img src="../images/about-2.jpg" class="img-responsive" alt="Bruno Fernandes - Gerente Administrativo"/>
             </figure>
-            <p class="mb-1">Porta um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação. A vantagem de usar Lorem Ipsum é que ele tem uma distribuição normal de letras, ao contrário de "Conteúdo aqui, conteúdo aqui", fazendo com que ele tenha uma aparência similar a de um texto legível.</p>
+            <p class="mb-1">Assessoria Nutricional de alto nível com profissionais qualificados e competentes, informações completas, consulta irrestrita na indicação de como fazer corretamente o tratamento e uso das dietas Nestlé compradas junto a Alfa Médico Hospitalar.</p>
           </div>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-4">
+        <div class="col-xs-12 col-sm-6">
           <div class="content-box border-content">
-          	<h3 class="heading-2">ASSISTÊNCIA CONTÍNUA</h3>
+          	<h3 class="heading-2">ORGANIZAÇÃO DE EVENTOS</h3>
             <figure class="figure-box fig-hover">
               <img src="../images/about-1.jpg" class="img-responsive" alt="Carlos Zéfiro - Gerente de vendas"/>
             </figure>
-            <p class="mb-1">Porta um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação. A vantagem de usar Lorem Ipsum é que ele tem uma distribuição normal de letras, ao contrário de "Conteúdo aqui, conteúdo aqui", fazendo com que ele tenha uma aparência similar a de um texto legível.</p>
+            <p class="mb-1">Organização de eventos no lançamento de produtos, palestras sobre assuntos de relevância à área, eventos sobre atualização científica, comemoração de datas relativas ao que envolve o modelo de negócio relacionado ao nosso trabalho.</p>
           </div>
         </div>
       </section>
-      <section class="row">
-        <div class="col-md-8 content-box">
-          <h3 class="heading-1">Saiba mais sobre nós</h3>
-          <ul class="nav nav-tabs">
-            <li class="active"><a href="#missao" data-toggle="tab">Missão</a></li>
-            <li><a href="#visao" data-toggle="tab">Visão</a></li>
-            <li><a href="#valores" data-toggle="tab">Valores</a></li>
-          </ul>
-          <div class="tab-content">
-            <div class="tab-pane tabs-pane fade in active" id="missao">
-              <p>Desenvolver as oportunidades de negócios visando atender as necessidades do cliente. Manter a qualidade e a referência no segmento, ressaltando sempre melhoria continua dos processos através da inovação organizacional. Desenvolver as oportunidades de negócios visando atender as necessidades do cliente.</p>
-              <p>Muitos softwares de publicação e editores de páginas na internet agora usam Lorem Ipsum como texto-modelo padrão, e uma rápida busca por 'lorem ipsum' mostra vários websites ainda em sua fase de construção. Várias versões novas surgiram ao longo dos anos, eventualmente por acidente, e às vezes de propósito (injetando humor, e coisas do gênero).</p>
-              <p>Desenvolver as oportunidades de negócios visando atender as necessidades do cliente. Manter a qualidade e a referência no segmento, ressaltando sempre melhoria continua dos processos através da inovação organizacional.</p>
+      <section class="slider2">
+        <h3 class="heading-1">Últimas Notícias</h3>
+        <ul class="slides">
+          <li>
+            <div class="row">
+              <div class="col-xs-12 col-sm-6 col-md-3">
+                <article class="border-content">
+                  <div class="item-thumbs">
+                    <a href="../news/news.html" class="hover-wrap" title="Transparência e confiabilidade">
+                    <span class="overlay-img"></span>
+                    <span class="overlay-img-ico icon-8"></span>
+                    </a>
+                    <img src="../images/news-1.jpg" alt="Transparência e confiabilidade">
+                  </div>
+                  <h4>Transparência e confiabilidade</h4>
+                  <span class="date">18 abriel de 2013 | 10 Comentários</span>
+                  <p>A partir da demanda de seus clientes na área Médico-Hospitalar a Omega Solutions desenvolveu um sólido portifólio.</p>
+                </article>
+              </div>
+              <div class="col-xs-12 col-sm-6 col-md-3">
+                <article class="border-content">
+                  <div class="item-thumbs">
+                    <a href="news/news.html" class="hover-wrap" title="Hospital Pérola Byington">
+                    <span class="overlay-img"></span>
+                    <span class="overlay-img-ico icon-8"></span>
+                    </a>
+                    <img src="../images/news-2.jpg" alt="Hospital Pérola Byington">
+                  </div>
+                  <h4>Hospital Pérola Byington</h4>
+                  <span class="date">18 abriel de 2013 | 10 Comentários</span>
+                  <p>A partir da demanda de seus clientes na área Médico-Hospitalar a Omega Solutions desenvolveu um sólido portifólio.</p>
+                </article>
+              </div>
+              <div class="col-xs-12 col-sm-6 col-md-3">
+                <article class="border-content">
+                  <div class="item-thumbs">
+                    <a href="news/news.html" class="hover-wrap" title="Tratamento de cobaias de plástico">
+                    <span class="overlay-img"></span>
+                    <span class="overlay-img-ico icon-8"></span>
+                    </a>
+                    <img src="../images/news-3.jpg" alt="Tratamento de cobaias de plástico">
+                  </div>
+                  <h4>Tratamento de cobaias de plástico</h4>
+                  <span class="date">18 abriel de 2013 | 10 Comentários</span>
+                  <p>A partir da demanda de seus clientes na área Médico-Hospitalar a Omega Solutions desenvolveu um sólido portifólio.</p>
+                </article>
+              </div>
+              <div class="col-xs-12 col-sm-6 col-md-3">
+                <article class="border-content">
+                  <div class="item-thumbs">
+                    <a href="news/news.html" class="hover-wrap" title="Condicionamento de atendimento">
+                    <span class="overlay-img"></span>
+                    <span class="overlay-img-ico icon-8"></span>
+                    </a>
+                    <img src="../images/news-4.jpg" alt="Condicionamento de atendimento">
+                  </div>
+                  <h4>Condicionamento de atendimento</h4>
+                  <span class="date">18 abriel de 2013 | 10 Comentários</span>
+                  <p>A partir da demanda de seus clientes na área Médico-Hospitalar a Omega Solutions desenvolveu um sólido portifólio.</p>
+                </article>
+              </div>
             </div>
-            <div class="tab-pane tabs-pane fade" id="visao">
-              <p>Desenvolver as oportunidades de negócios visando atender as necessidades do cliente. Manter a qualidade e a referência no segmento, ressaltando sempre melhoria continua dos processos através da inovação organizacional. Desenvolver as oportunidades de negócios visando atender as necessidades do cliente.</p>
-              <p>Muitos softwares de publicação e editores de páginas na internet agora usam Lorem Ipsum como texto-modelo padrão, e uma rápida busca por 'lorem ipsum' mostra vários websites ainda em sua fase de construção. Várias versões novas surgiram ao longo dos anos, eventualmente por acidente, e às vezes de propósito (injetando humor, e coisas do gênero).</p>
-              <p>Desenvolver as oportunidades de negócios visando atender as necessidades do cliente. Manter a qualidade e a referência no segmento, ressaltando sempre melhoria continua dos processos através da inovação organizacional.</p>
+          </li>
+          <li>
+            <div class="row">
+              <div class="col-xs-12 col-sm-6 col-md-3">
+                <article class="border-content">
+                  <div class="item-thumbs">
+                    <a href="news/news.html" class="hover-wrap" title="Tratamento de cobaias de plástico">
+                    <span class="overlay-img"></span>
+                    <span class="overlay-img-ico icon-8"></span>
+                    </a>
+                    <img src="../images/news-5.jpg" alt="Tratamento de cobaias de plástico">
+                  </div>
+                  <h4>Condicionamento de atendimento</h4>
+                  <span class="date">18 abriel de 2013 | 10 Comentários</span>
+                  <p>A partir da demanda de seus clientes na área Médico-Hospitalar a Omega Solutions desenvolveu um sólido portifólio.</p>
+                </article>
+              </div>
+              <div class="col-xs-12 col-sm-6 col-md-3">
+                <article class="border-content">
+                  <div class="item-thumbs">
+                    <a href="news/news.html" class="hover-wrap" title="Tratamento de cobaias de plástico">
+                    <span class="overlay-img"></span>
+                    <span class="overlay-img-ico icon-8"></span>
+                    </a>
+                    <img src="../images/news-6.jpg" alt="Tratamento de cobaias de plástico">
+                  </div>
+                  <h4>Tratamento de cobaias de plástico</h4>
+                  <span class="date">18 abriel de 2013 | 10 Comentários</span>
+                  <p>A partir da demanda de seus clientes na área Médico-Hospitalar a Omega Solutions desenvolveu um sólido portifólio.</p>
+                </article>
+              </div>
+              <div class="col-xs-12 col-sm-6 col-md-3">
+                <article class="border-content">
+                  <div class="item-thumbs">
+                    <a href="news/news.html" class="hover-wrap" title="Tratamento de cobaias de plástico">
+                    <span class="overlay-img"></span>
+                    <span class="overlay-img-ico icon-8"></span>
+                    </a>
+                    <img src="../images/news-7.jpg" alt="Tratamento de cobaias de plástico">
+                  </div>
+                  <h4>Hospital Pérola Byington</h4>
+                  <span class="date">18 abriel de 2013 | 10 Comentários</span>
+                  <p>A partir da demanda de seus clientes na área Médico-Hospitalar a Omega Solutions desenvolveu um sólido portifólio.</p>
+                </article>
+              </div>
+              <div class="col-xs-12 col-sm-6 col-md-3">
+                <article class="border-content">
+                  <div class="item-thumbs">
+                    <a href="news/news.html" class="hover-wrap" title="Tratamento de cobaias de plástico">
+                    <span class="overlay-img"></span>
+                    <span class="overlay-img-ico icon-8"></span>
+                    </a>
+                    <img src="../images/news-8.jpg" alt="Tratamento de cobaias de plástico">
+                  </div>
+                  <h4>Transparência e confiabilidade</h4>
+                  <span class="date">18 abriel de 2013 | 10 Comentários</span>
+                  <p>A partir da demanda de seus clientes na área Médico-Hospitalar a Omega Solutions desenvolveu um sólido portifólio.</p>
+                </article>
+              </div>
             </div>
-            <div class="tab-pane tabs-pane fade" id="valores">
-              <p>Desenvolver as oportunidades de negócios visando atender as necessidades do cliente. Manter a qualidade e a referência no segmento, ressaltando sempre melhoria continua dos processos através da inovação organizacional.</p>
-              <p>Muitos softwares de publicação e editores de páginas na internet agora usam Lorem Ipsum como texto-modelo padrão, e uma rápida busca por 'lorem ipsum' mostra vários websites ainda em sua fase de construção. Várias versões novas surgiram ao longo dos anos, eventualmente por acidente, e às vezes de propósito (injetando humor, e coisas do gênero).</p>
-              <p>Desenvolver as oportunidades de negócios visando atender as necessidades do cliente. Manter a qualidade e a referência no segmento, ressaltando sempre melhoria continua dos processos através da inovação organizacional. Desenvolver as oportunidades de negócios visando atender as necessidades do cliente.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-xs-12 col-md-4 col-lg-4">
-          <div class="content-box">
-            <h3 class="heading-1">Linhas de atuação</h3>
-            <ul class="list-a">
-              <li><a href="#fakelink" title="Nutrição Enteral"><span class="icon-6"></span>Nutrição Enteral</a></li>
-              <li><a href="#fakelink" title="Fórmula Infantil"><span class="icon-6"></span>Fórmula Infantil</a></li>
-              <li><a href="#fakelink" title="Nutrição Parenteral"><span class="icon-6"></span>Nutrição Parenteral</a></li>
-              <li><a href="#fakelink" title="Tecnologia de Infusão"><span class="icon-6"></span>Tecnologia de Infusão</a></li>
-              <li><a href="#fakelink" title="Anestesiologia"><span class="icon-6"></span>Anestesiologia</a></li>
-              <li><a href="#fakelink" title="Linha de Cateteres"><span class="icon-6"></span>Linha de Cateteres</a></li>
-              <li><a href="#fakelink" title="Veja toda linha de produtos"><span class="icon-6"></span>Veja toda linha de produtos</a></li>
-            </ul>
-          </div>
-        </div>
+          </li>
+        </ul>
       </section>
     </main>
     <footer class="container" role="contentinfo">
