--- a/products/product.html
+++ b/products/product.html
@@ -28,7 +28,7 @@
             <a href="../index.html" title="Homepage">Home<span class="icon-10"></span></a>
             <a href="../about/about.html" title="Sobre Nós">Sobre Nós<span class="icon-10"></span></a>
             <a href="../products/products.html" class="current" title="Produtos">Produtos<span class="icon-10"></span></a>
-            <a href="#fakelink" title="Serviços">Serviços<span class="icon-10"></span></a>
+            <a href="../pages/service.html" title="Serviços">Serviços<span class="icon-10"></span></a>
             <a href="../news/blog.html" title="Notícias">Notícias<span class="icon-10"></span></a>
             <a href="../contact.html" title="Contato">Contato<span class="icon-10"></span></a>
           </nav>
@@ -359,7 +359,7 @@
                 <h3 class="heading-1">Acesso rápido</h3>
                 <nav class="vert-nav">
                   <a href="../products/products.html"><span class="icon-10"></span>Produtos</a>
-                  <a href="#fakelink"><span class="icon-10"></span>Serviços</a>
+                  <a href="../pages/service.html"><span class="icon-10"></span>Serviços</a>
                   <a href="../news/blog.html"><span class="icon-10"></span>Notícias</a>
                   <a href="../contact.html"><span class="icon-10"></span>Contato</a>
                 </nav>
