Add images Services

--- a/pages/service.html
+++ b/pages/service.html
@@ -113,7 +113,7 @@
           <div class="content-box border-content">
           	<h3 class="heading-2">ASSESSORIA NUTRICIONAL</h3>
             <figure class="figure-box fig-hover">
-              <img src="../images/about-2.jpg" class="img-responsive" alt="Bruno Fernandes - Gerente Administrativo"/>
+              <img src="../images/serv-2.jpg" class="img-responsive" alt="Bruno Fernandes - Gerente Administrativo"/>
             </figure>
             <p class="mb-1">Assessoria Nutricional de alto nível com profissionais qualificados e competentes, informações completas, consulta irrestrita na indicação de como fazer corretamente o tratamento e uso das dietas Nestlé compradas junto a Alfa Médico Hospitalar.</p>
           </div>
@@ -122,7 +122,7 @@
           <div class="content-box border-content">
           	<h3 class="heading-2">ORGANIZAÇÃO DE EVENTOS</h3>
             <figure class="figure-box fig-hover">
-              <img src="../images/about-1.jpg" class="img-responsive" alt="Carlos Zéfiro - Gerente de vendas"/>
+              <img src="../images/serv-1.jpg" class="img-responsive" alt="Carlos Zéfiro - Gerente de vendas"/>
             </figure>
             <p class="mb-1">Organização de eventos no lançamento de produtos, palestras sobre assuntos de relevância à área, eventos sobre atualização científica, comemoração de datas relativas ao que envolve o modelo de negócio relacionado ao nosso trabalho.</p>
           </div>
