Add page Product List
Updated links

--- a/products/list.html
+++ b/products/list.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
   <head>
     <meta charset="utf-8">
-    <title>Produtos · Alfa Médico Hospitalar</title>
+    <title>Nestlé Health Science · Alfa Médico Hospitalar</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../css/base.css" rel="stylesheet">
     <link href="../css/alfa.css" rel="stylesheet">
@@ -27,7 +27,7 @@
             <h1 class="hide">Menu de avegação</h1>
             <a href="../index.html" title="Homepage">Home<span class="icon-10"></span></a>
             <a href="../about/about.html" title="Sobre Nós">Sobre Nós<span class="icon-10"></span></a>
-            <a class="current" title="Produtos">Produtos<span class="icon-10"></span></a>
+            <a href="../products/products.html" class="current" title="Produtos">Produtos<span class="icon-10"></span></a>
             <a href="../pages/service.html" title="Serviços">Serviços<span class="icon-10"></span></a>
             <a href="../news/blog.html" title="Notícias">Notícias<span class="icon-10"></span></a>
             <a href="../contact.html" title="Contato">Contato<span class="icon-10"></span></a>
@@ -44,13 +44,13 @@
             <a href="#fakelink" class="ico-google btn"></a>
           </div>
         </section>
-        <div class="col-xs-12 col-sm-12 col-md-9 mb-0">
-          <div class="main-slider-container hidden-xs hidden-sm">
+        <div class="col-xs-12 col-sm-12 col-md-9 mb-0 hidden-xs hidden-sm">
+          <div class="main-slider-container">
             <div class="alfa-slider">
               <ul class="slides">
                 <li>
                   <figure>
-                    <a href="#fakelink" title="Iluminação adequada, segurança para diagnósticos precisos."><img src="../images/slider-1.jpg" alt="Iluminação adequada, segurança para diagnósticos precisos."/></a>
+                    <a href="#fakelink" title="Iluminação adequada, segurança para diagnósticos precisos."><img src="../images/slider-1.jpg" alt="Iluminação adequada, segurança para diagnósticos precisos."></a>
                     <figcaption class="slider-legend">
                       <div class="slider-txt col-xs-12 col-sm-8 col-lg-9">
                         <h3>Iluminação adequada, segurança para diagnósticos precisos.</h3>
@@ -64,7 +64,7 @@
                 </li>
                 <li>
                   <figure>
-                    <a href="#fakelink" title="Iluminação adequada, segurança para diagnósticos precisos."><img src="../images/slider-1.jpg" alt="Iluminação adequada, segurança para diagnósticos precisos."/></a>
+                    <a href="#fakelink" title="Iluminação adequada, segurança para diagnósticos precisos."><img src="../images/slider-1.jpg" alt="Iluminação adequada, segurança para diagnósticos precisos."></a>
                     <figcaption class="slider-legend">
                       <div class="slider-txt col-xs-12 col-sm-8 col-lg-9">
                         <h3>Iluminação adequada, segurança para diagnósticos precisos.</h3>
@@ -78,7 +78,7 @@
                 </li>
                 <li>
                   <figure>
-                    <a href="#fakelink" title="Iluminação adequada, segurança para diagnósticos precisos."><img src="../images/slider-1.jpg" alt="Iluminação adequada, segurança para diagnósticos precisos."/></a>
+                    <a href="#fakelink" title="Iluminação adequada, segurança para diagnósticos precisos."><img src="../images/slider-1.jpg" alt="Iluminação adequada, segurança para diagnósticos precisos."></a>
                     <figcaption class="slider-legend">
                       <div class="slider-txt col-xs-12 col-sm-8 col-lg-9">
                         <h3>Iluminação adequada, segurança para diagnósticos precisos.</h3>
@@ -94,13 +94,31 @@
             </div>
           </div>
           <div class="row">
-            <section class="col-xs-12">
+            <section class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
               <div class="border-content">
                 <div class="clearfix">
-                  <h1 class="title-front mb-3">Conheça a nossa linha de produtos</h1>
+                  <i class="icon-1 title-icon-front"></i>
+                  <h2 class="title-front">Facilidade & Inovação</h2>
                 </div>
-                <p>Lâmpadas para microscópios, laringoscópios, laparoscopia e equipamentos científicos de uso medicinal, laboratorial, cirúrgico. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>Lâmpadas para microscópios, laringoscópios, laparoscopia e equipamentos científicos de uso medicinal, laboratorial, cirúrgico.</p>
+              </div>
+            </section>
+            <section class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+              <div class="border-content">
+                <div class="clearfix">
+                  <i class="icon-2 title-icon-front"></i>
+                  <h2 class="title-front">Experiência de Longo Prazo</h2>
+                </div>
+                <p>Lâmpadas para microscópios, laringoscópios, laparoscopia e equipamentos científicos de uso medicinal, laboratorial, cirúrgico.</p>
+              </div>
+            </section>
+            <section class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+              <div class="border-content">
+                <div class="clearfix">
+                  <i class="icon-3 title-icon-front"></i>
+                  <h2 class="title-front">Assistência Contínua</h2>
+                </div>
+                <p>Lâmpadas para microscópios, laringoscópios, laparoscopia e equipamentos científicos de uso medicinal, laboratorial, cirúrgico.</p>
               </div>
             </section>
           </div>
@@ -108,131 +126,86 @@
       </div>
     </header>
     <main class="container" role="main">
-      <h3 class="heading-1">Navegue por empresa</h3>
+      <h1 class="title-front-news mb-3">Linha de produtos <strong>Nestlé Health Science</strong></h1>
       <section class="row">
-        <div class="col-xs-12 col-sm-12 col-md-4">
-          <div class="content-box">
-            <figure class="item-thumbs">
-              <a href="list.html" class="hover-wrap" title="Nestlé Health Science">
-              <span class="overlay-img"></span>
-              <span class="overlay-img-ico icon-7"></span>
-              </a>
-              <img src="../images/corp-1.jpg" class="img-responsive" alt="Nestlé Health Science"/>
-            </figure>
-          </div>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-4">
-          <div class="content-box">
-            <figure class="item-thumbs">
-              <a href="list.html" class="hover-wrap" title="Baxter">
-              <span class="overlay-img"></span>
-              <span class="overlay-img-ico icon-7"></span>
-              </a>
-              <img src="../images/corp-2.jpg" class="img-responsive" alt="Baxter"/>
-            </figure>
-          </div>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-4">
-          <div class="content-box">
-            <figure class="item-thumbs">
-              <a href="list.html" class="hover-wrap" title="Medcorp">
-              <span class="overlay-img"></span>
-              <span class="overlay-img-ico icon-7"></span>
-              </a>
-              <img src="../images/corp-3.jpg" class="img-responsive" alt="Medcorp"/>
-            </figure>
-          </div>
+        <div class="col-xs-12">
+          <article class="content-blog results">
+            <div class="row">
+            	<div class="col-md-4 mg-0">
+            		<figure class="figure-box fig-hover">
+            		  <a href="news.html" title="Nutren® Active Banana"><img src="../images/prod-4.jpg" class="img-responsive" alt="Nutren® Active Banana"></a>
+            		</figure>
+            	</div>
+            	<div class="col-md-8">
+            		<h2 class="heading-news"><a href="news.html" title="Nutren® Active Banana">Nutren® Active Banana</a></h2>
+            		<p>É um delicioso suplemento 100% sabor NESTLÉ®, ideal para quem busca a reeducação alimentar mesmo sem tempo para se alimentar corretamente. NUTREN® Active contém 25 vitaminas e minerais, além de ser uma importante fonte de proteínas. NUTREN® Active possui Prebio 1, um avançado ingrediente desenvolvido pela NESTLÉ® que contribui com a saúde do sistema digestório, melhorando o aproveitamento dos nutrientes presentes nos alimentos. NUTREN® Active pode ser consumido a qualquer hora, frio ou quente. Com NUTREN® Active, seu dia fica mais completo.</p>
+            		<footer class="clearfix">
+            		  <a href="news.html" class="read-more" title="Nutren® Active Banana">Saiba mais<span class="icon-16"></span></a>
+            		</footer>
+            	</div>
+            </div>
+          </article>
+          <article class="content-blog results">
+            <div class="row">
+            	<div class="col-md-4 mg-0">
+            		<figure class="figure-box fig-hover">
+            		  <a href="news.html" title="Nutren® Senior 200 ml Baunilha"><img src="../images/prod-6.jpg" class="img-responsive" alt="Nutren® Senior 200 ml Baunilha"></a>
+            		</figure>
+            	</div>
+            	<div class="col-md-8">
+            		<h2 class="heading-news"><a href="news.html" title="Nutren® Senior 200 ml Baunilha">Nutren® Senior 200 ml Baunilha</a></h2>
+            		<p>Nutren Senior é um suplemento nutricional completo, para uso oral ou enteral, formulado com nutrientes essenciais para os idosos como ACT 3, que é uma combinação única de proteínas, cálcio e vitamina D.  Possui também Prebio1, que é um composto exclusivo da Nestlé a base de inulina e FOS (frutoligossacarideos) que contribui para o equilíbrio da flora intestinal. Contém EPA/DHA e alta quantidade de vitamina do complexo B (folato, B1, B2 ) zinco e selênio, para auxiliar no estado nutricional dos pacientes desnutridos ou em risco de desnutrição, e melhorar a força e a capacidade funcional. Isento de lactose.</p>
+            		<footer class="clearfix">
+            		  <a href="news.html" class="read-more" title="Nutren® Senior 200 ml Baunilha">Saiba mais<span class="icon-16"></span></a>
+            		</footer>
+            	</div>
+            </div>
+          </article>
+          <article class="content-blog results">
+            <div class="row">
+            	<div class="col-md-4 mg-0">
+            		<figure class="figure-box fig-hover">
+            		  <a href="news.html" title="Nutren® Active Chocolate"><img src="../images/prod-5.jpg" class="img-responsive" alt="Nutren® Active Chocolate"></a>
+            		</figure>
+            	</div>
+            	<div class="col-md-8">
+            		<h2 class="heading-news"><a href="news.html" title="Nutren® Active Chocolate">Nutren® Active Chocolate</a></h2>
+            		<p>É um delicioso suplemento 100% sabor NESTLÉ®, ideal para quem busca a reeducação alimentar mesmo sem tempo para se alimentar corretamente. NUTREN® Active contém 25 vitaminas e minerais, além de ser uma importante fonte de proteínas. NUTREN® Active possui Prebio 1, um avançado ingrediente desenvolvido pela NESTLÉ® que contribui com a saúde do sistema digestório, melhorando o aproveitamento dos nutrientes presentes nos alimentos. NUTREN® Active pode ser consumido a qualquer hora, frio ou quente. Com NUTREN® Active, seu dia fica mais completo.</p>
+            		<footer class="clearfix">
+            		  <a href="news.html" class="read-more" title="Nutren® Active Chocolate">Saiba mais<span class="icon-16"></span></a>
+            		</footer>
+            	</div>
+            </div>
+          </article>
+          <article class="content-blog results">
+            <div class="row">
+            	<div class="col-md-4 mg-0">
+            		<figure class="figure-box fig-hover">
+            		  <a href="news.html" title="Nestlé NAN Pro 2"><img src="../images/prod-8.jpg" class="img-responsive" alt="Nestlé NAN Pro 2"></a>
+            		</figure>
+            	</div>
+            	<div class="col-md-8">
+            		<h2 class="heading-news"><a href="news.html" title="Nestlé NAN Pro 2">Nestlé NAN Pro 2</a></h2>
+            		<p>NAN 2 é um leite de transição para lactentes a partir dos 6 meses de idade, sem risco de desenvolver alergias, que em conjunto com outros alimentos, faz parte da alimentação diversificada do bebé. Não deve ser usado como substituto do leite materno durante os primeiros 6 meses de idade. OPTI PRO2 – Uma mistura proteica adaptada para fornecer a quantidade certa de proteínas necessárias ao crescimento do bebé sem sobrecarregar os órgãos ainda imaturos.</p>
+            		<footer class="clearfix">
+            		  <a href="news.html" class="read-more" title="Nestlé NAN Pro 2">Saiba mais<span class="icon-16"></span></a>
+            		</footer>
+            	</div>
+            </div>
+          </article>
         </div>
       </section>
-      <h3 class="heading-1">Navegue por segmento</h3>
-      <section class="row">
-        <div class="col-xs-12 col-sm-4 col-md-4">
-          <div class="content-box content-padd">
-            <figure class="figure-box item-thumbs">
-              <a href="#fakelink" class="hover-wrap" title="Nutrição Enteral">
-              <span class="overlay-img"></span>
-              <span class="overlay-img-ico icon-7"></span>
-              </a>
-              <img src="../images/prod-4.jpg" class="img-responsive" alt="Nutrição Enteral"/>
-            </figure>
-            <h3 class="heading-2">Nutrição Enteral</h3>
-            <p class="mb-1">Porta um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação.</p>
-            <a href="#fakelink" class="link-full" title="Nutrição Enteral">Visite esse segmento<span class="icon-10"></span></a>
-          </div>
-        </div>
-        <div class="col-xs-12 col-sm-4 col-md-4">
-          <div class="content-box content-padd">
-            <figure class="figure-box item-thumbs">
-              <a href="#fakelink" class="hover-wrap" title="Fórmula Infantil">
-              <span class="overlay-img"></span>
-              <span class="overlay-img-ico icon-7"></span>
-              </a>
-              <img src="../images/prod-5.jpg" class="img-responsive" alt="Fórmula Infantil"/>
-            </figure>
-            <h3 class="heading-2">Fórmula Infantil</h3>
-            <p class="mb-1">Porta um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação.</p>
-            <a href="#fakelink" class="link-full" title="Fórmula Infantil">Visite esse segmento<span class="icon-10"></span></a>
-          </div>
-        </div>
-        <div class="col-xs-12 col-sm-4 col-md-4">
-          <div class="content-box content-padd">
-            <figure class="figure-box item-thumbs">
-              <a href="#fakelink" class="hover-wrap" title="Nutrição Enteral">
-              <span class="overlay-img"></span>
-              <span class="overlay-img-ico icon-7"></span>
-              </a>
-              <img src="../images/prod-6.jpg" class="img-responsive" alt="Nutrição Parenteral"/>
-            </figure>
-            <h3 class="heading-2">Nutrição Parenteral</h3>
-            <p class="mb-1">Porta um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação.</p>
-            <a href="#fakelink" class="link-full" title="Nutrição Parenteral">Visite esse segmento<span class="icon-10"></span></a>
-          </div>
-        </div>
-      </section>
-      <section class="row">
-        <div class="col-xs-12 col-sm-4 col-md-4">
-          <div class="content-box content-padd">
-            <figure class="figure-box item-thumbs">
-              <a href="#fakelink" class="hover-wrap" title="Nutrição Enteral">
-              <span class="overlay-img"></span>
-              <span class="overlay-img-ico icon-7"></span>
-              </a>
-              <img src="../images/prod-2.jpg" class="img-responsive" alt="Tecnologia de Infusão"/>
-            </figure>
-            <h3 class="heading-2">Tecnologia de Infusão</h3>
-            <p class="mb-1">Porta um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação.</p>
-            <a href="#fakelink" class="link-full" title="Tecnologia de Infusão">Visite esse segmento<span class="icon-10"></span></a>
-          </div>
-        </div>
-        <div class="col-xs-12 col-sm-4 col-md-4">
-          <div class="content-box content-padd">
-            <figure class="figure-box item-thumbs">
-              <a href="#fakelink" class="hover-wrap" title="Fórmula Infantil">
-              <span class="overlay-img"></span>
-              <span class="overlay-img-ico icon-7"></span>
-              </a>
-              <img src="../images/prod-7.jpg" class="img-responsive" alt="Anestesiologia"/>
-            </figure>
-            <h3 class="heading-2">Anestesiologia</h3>
-            <p class="mb-1">Porta um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação.</p>
-            <a href="#fakelink" class="link-full" title="Anestesiologia">Visite esse segmento<span class="icon-10"></span></a>
-          </div>
-        </div>
-        <div class="col-xs-12 col-sm-4 col-md-4">
-          <div class="content-box content-padd">
-            <figure class="figure-box item-thumbs">
-              <a href="#fakelink" class="hover-wrap" title="Nutrição Enteral">
-              <span class="overlay-img"></span>
-              <span class="overlay-img-ico icon-7"></span>
-              </a>
-              <img src="../images/prod-3.jpg" class="img-responsive" alt="Linha de Cateteres"/>
-            </figure>
-            <h3 class="heading-2">Linha de Cateteres</h3>
-            <p class="mb-1">Porta um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação.</p>
-            <a href="#fakelink" class="link-full" title="Linha de Cateteres">Visite esse segmento<span class="icon-10"></span></a>
-          </div>
-        </div>
-      </section>
+      <div class="bar-division">
+        <ul class="pagination pagination-lg">
+          <li class="disabled"><a class="icon-17"></a></li>
+          <li class="active"><a href="#">1</a></li>
+          <li><a href="#">2</a></li>
+          <li><a href="#">3</a></li>
+          <li><a href="#">4</a></li>
+          <li><a href="#">5</a></li>
+          <li><a href="#" class="icon-18"></a></li>
+        </ul>
+      </div>
     </main>
     <footer class="container" role="contentinfo">
       <div class="ct-footer">
@@ -290,7 +263,7 @@
               <div class="box-footer">
                 <h3 class="heading-1">Acesso rápido</h3>
                 <nav class="vert-nav">
-                  <a href="products.html"><span class="icon-10"></span>Produtos</a>
+                  <a href="../products/products.html"><span class="icon-10"></span>Produtos</a>
                   <a href="../pages/service.html"><span class="icon-10"></span>Serviços</a>
                   <a href="../news/blog.html"><span class="icon-10"></span>Notícias</a>
                   <a href="../contact.html"><span class="icon-10"></span>Contato</a>
